# Task-Scheduler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: 使用说明.md  设计文档.md
etc/: tasks.conf  tsched.conf
include/tsched/: tsched.h
openwrt/: Makefile
openwrt/files/: tasks.conf  tsched.conf  tschedd.init
src/: client.c  config.c  daemon.c  heap.c  log.c  util.c
tests/: test_backpressure.sh  test_capacity.sh  test_config.c  test_heap.c  test_integration.sh  test_ipc.c  test_log.c  test_output_backpressure.sh  test_timing.sh
www/: app.js  index.html  style.css
